--- a/tests/test_cases/2018/commands/7C4.2143.yaml
+++ b/tests/test_cases/2018/commands/7C4.2143.yaml
@@ -14,6 +14,18 @@ test_cases:
   response: |-
     7CC03614309
     7DF02010C
+    7E804410C0AC7
+    7DF02010D
+    7E803410D00
+    7DF020110
+    7E80441100205
+    7DF020142
+    7E804414233A6
+- expected_values:
+    TOYOTA_AIR_OUTLET_SERVO_PULSE_D: 9
+  response: |-
+    7CC03614309
+    7DF02010C
     7E804410C0B41
     7DF02010D
     7E803410D00
