--- a/tests/test_cases/2018/commands/7E0.7E8.2101.yaml
+++ b/tests/test_cases/2018/commands/7E0.7E8.2101.yaml
@@ -19,6 +19,15 @@ test_cases:
     7E8235234FF2C30343A
     7E82435C90000000000
 - expected_values:
+    TOYOTA_CALCULATED_LOAD_7E0: 30.19608
+    TOYOTA_VEHICLE_LOAD: 0.06409
+  response: |-
+    7E8101D61014D002A02
+    7E821354C4C657D0969
+    7E8220003F7002C7E29
+    7E823522CFF3062396B
+    7E824336C0000000000
+- expected_values:
     TOYOTA_CALCULATED_LOAD_7E0: 37.2549
     TOYOTA_VEHICLE_LOAD: 0.09918
   response: |-
