--- a/tests/test_cases/2018/commands/7E0.7E8.2105.yaml
+++ b/tests/test_cases/2018/commands/7E0.7E8.2105.yaml
@@ -8,6 +8,12 @@ test_cases:
     7E8210DE90ACA0ACA00
     7E804410C1744
 - expected_values:
+    TOYOTA_CATALYST_T_B1S1: 389.3
+    TOYOTA_CATALYST_T_B1S2: 389.3
+  response: |-
+    7E8100C61054FC810C5
+    7E82110C5081D081D00
+- expected_values:
     TOYOTA_CATALYST_T_B1S1: 278.9
     TOYOTA_CATALYST_T_B1S2: 278.9
   response: |-
