--- a/tests/test_cases/2023/commands/700.708.22105C.yaml
+++ b/tests/test_cases/2023/commands/700.708.22105C.yaml
@@ -25,6 +25,10 @@ test_cases:
     TOYOTA_KNOCK_FEEDBACK_VALUE: -3
   response: 7080762105C82A77FA0
 - expected_values:
+    TOYOTA_KNOCK_CORRECT_LEARNED_VALUE: 21.28125
+    TOYOTA_KNOCK_FEEDBACK_VALUE: -3
+  response: 7080762105C82A97FA0
+- expected_values:
     TOYOTA_KNOCK_CORRECT_LEARNED_VALUE: 21.34375
     TOYOTA_KNOCK_FEEDBACK_VALUE: -3
   response: 7080762105C82AB7FA0
