--- a/tests/test_cases/2023/commands/700.708.221062.yaml
+++ b/tests/test_cases/2023/commands/700.708.221062.yaml
@@ -6,11 +6,14 @@ test_cases:
     221062
     70805621062086F
 - expected_values:
-    TOYOTA_EXHAUST_VVT_OCV_CONTROL_DUTY: 11.93256
-  response: 7080562106207A3
+    TOYOTA_EXHAUST_VVT_OCV_CONTROL_DUTY: 11.91424
+  response: 7080562106207A0
 - expected_values:
     TOYOTA_EXHAUST_VVT_OCV_CONTROL_DUTY: 49.97635
   response: 708056210621FFC
 - expected_values:
     TOYOTA_EXHAUST_VVT_OCV_CONTROL_DUTY: 50.4036
   response: '708056210622042'
+- expected_values:
+    TOYOTA_EXHAUST_VVT_OCV_CONTROL_DUTY: 60.09613
+  response: '708056210622676'
