--- a/tests/test_cases/2023/commands/700.708.22106A.yaml
+++ b/tests/test_cases/2023/commands/700.708.22106A.yaml
@@ -1,6 +1,30 @@
 command_id: 700.708.22106A
 test_cases:
 - expected_values:
+    TOYOTA_FP_DUTY_RATIO: 30
+    TOYOTA_FUEL_PUMP_DUTY_RATIO: 30
+  response: 7080562106A01EC
+- expected_values:
+    TOYOTA_FP_DUTY_RATIO: 240.67073
+    TOYOTA_FUEL_PUMP_DUTY_RATIO: 240.67073
+  response: 7080562106A0F6B
+- expected_values:
     TOYOTA_FP_DUTY_RATIO: 240.97561
     TOYOTA_FUEL_PUMP_DUTY_RATIO: 240.97561
   response: 7080562106A0F70
+- expected_values:
+    TOYOTA_FP_DUTY_RATIO: 248.65854
+    TOYOTA_FUEL_PUMP_DUTY_RATIO: 248.65854
+  response: 7080562106A0FEE
+- expected_values:
+    TOYOTA_FP_DUTY_RATIO: 252.0122
+    TOYOTA_FUEL_PUMP_DUTY_RATIO: 252.0122
+  response: 7080562106A1025
+- expected_values:
+    TOYOTA_FP_DUTY_RATIO: 254.32927
+    TOYOTA_FUEL_PUMP_DUTY_RATIO: 254.32927
+  response: 7080562106A104B
+- expected_values:
+    TOYOTA_FP_DUTY_RATIO: 318.65854
+    TOYOTA_FUEL_PUMP_DUTY_RATIO: 318.65854
+  response: 7080562106A146A
