--- a/tests/test_cases/2023/commands/700.708.221089.yaml
+++ b/tests/test_cases/2023/commands/700.708.221089.yaml
@@ -1,6 +1,26 @@
 command_id: 700.708.221089
 test_cases:
 - expected_values:
+    TOYOTA_EXHAUST_VVT_HOLD_LEARN_B1: 62.08869
+    TOYOTA_EXHAUST_VVT_HOLD_LEARN_VALUE_1: 62.08869
+  response: 7080562108927BF
+- expected_values:
+    TOYOTA_EXHAUST_VVT_HOLD_LEARN_B1: 63.44336
+    TOYOTA_EXHAUST_VVT_HOLD_LEARN_VALUE_1: 63.44336
+  response: 70805621089289D
+- expected_values:
+    TOYOTA_EXHAUST_VVT_HOLD_LEARN_B1: 63.8644
+    TOYOTA_EXHAUST_VVT_HOLD_LEARN_VALUE_1: 63.8644
+  response: '7080562108928E2'
+- expected_values:
     TOYOTA_EXHAUST_VVT_HOLD_LEARN_B1: 63.98644
     TOYOTA_EXHAUST_VVT_HOLD_LEARN_VALUE_1: 63.98644
   response: 7080562108928F6
+- expected_values:
+    TOYOTA_EXHAUST_VVT_HOLD_LEARN_B1: 63.99254
+    TOYOTA_EXHAUST_VVT_HOLD_LEARN_VALUE_1: 63.99254
+  response: 7080562108928F7
+- expected_values:
+    TOYOTA_EXHAUST_VVT_HOLD_LEARN_B1: 64.23663
+    TOYOTA_EXHAUST_VVT_HOLD_LEARN_VALUE_1: 64.23663
+  response: 70805621089291F
