--- a/tests/test_cases/2023/commands/700.708.221627.yaml
+++ b/tests/test_cases/2023/commands/700.708.221627.yaml
@@ -3,3 +3,18 @@ test_cases:
 - expected_values:
     TOYOTA_ATF_T_PAN_V3: 35
   response: 708056216274B00
+- expected_values:
+    TOYOTA_ATF_T_PAN_V3: 55
+  response: 708056216275F00
+- expected_values:
+    TOYOTA_ATF_T_PAN_V3: 55.625
+  response: 708056216275FA0
+- expected_values:
+    TOYOTA_ATF_T_PAN_V3: 56.875
+  response: '7080562162760E0'
+- expected_values:
+    TOYOTA_ATF_T_PAN_V3: 57.5
+  response: '708056216276180'
+- expected_values:
+    TOYOTA_ATF_T_PAN_V3: 60
+  response: '708056216276400'
