--- a/tests/test_cases/2018/commands/7C0.7C8.2141.yaml
+++ b/tests/test_cases/2018/commands/7C0.7C8.2141.yaml
@@ -18,3 +18,6 @@ test_cases:
 - expected_values:
     TOYOTA_OIL_CHANGE_ODO: 1770.2784
   response: 7C80361410B
+- expected_values:
+    TOYOTA_OIL_CHANGE_ODO: 2092.1472
+  response: 7C80361410D
