--- a/tests/test_cases/2018/commands/7E0.7E8.2145.yaml
+++ b/tests/test_cases/2018/commands/7E0.7E8.2145.yaml
@@ -66,6 +66,21 @@ test_cases:
   response: |-
     7E81015614501000000
     7E82100000000000000
+    7E82200007200009E00
+    7E82380000000000000
+- expected_values:
+    TOYOTA_ALL_CYLINDERS_MISFIRE_CNT: 0
+    TOYOTA_CYL1_MISFIRE_CNT: 0
+    TOYOTA_CYL2_MISFIRE_CNT: 0
+    TOYOTA_CYL3_MISFIRE_CNT: 0
+    TOYOTA_CYL4_MISFIRE_CNT: 0
+    TOYOTA_IGNITION_TRIG_CNT: 0
+    TOYOTA_MISFIRE_LOAD_V2: 0
+    TOYOTA_MISFIRE_MARGIN_V2: -128
+    TOYOTA_MISFIRE_RPM_V2: 0
+  response: |-
+    7E81015614501000000
+    7E82100000000000000
     7E82200011400009900
     7E82380000000000000
     7E804410C0B22
