--- a/tests/test_cases/2018/commands/7E0.7E8.2151.yaml
+++ b/tests/test_cases/2018/commands/7E0.7E8.2151.yaml
@@ -199,6 +199,41 @@ test_cases:
     7E82480448000800000
     7E82500000000000000
 - expected_values:
+    TOYOTA_AC_AMB_T: 18
+    TOYOTA_AC_FB: 0
+    TOYOTA_ELEC_LOAD_FB: 0
+    TOYOTA_ENG_SPD_START_OFF: 771.875
+    TOYOTA_ENG_START_HESIT: 1
+    TOYOTA_ENG_START_T: 0
+    TOYOTA_EOT: 75
+    TOYOTA_EOT_V3: 75
+    TOYOTA_IMMOB_FUEL_CUT: 0
+    TOYOTA_ISC_FB: 0
+    TOYOTA_ISC_FLOW: 8.73169
+    TOYOTA_ISC_LEARN: 6.61133
+    TOYOTA_ISC_POS: 5.07355
+    TOYOTA_LOW_RPM_CTRL: 0
+    TOYOTA_LOW_RPM_START: 0
+    TOYOTA_NEUTRAL_CTRL: 0
+    TOYOTA_N_RANGE_STS: 1
+    TOYOTA_PREV_TRIP_AMB_T: 18
+    TOYOTA_PREV_TRIP_DST: 0.49
+    TOYOTA_PREV_TRIP_EOT: 75
+    TOYOTA_PREV_TRIP_IAT: 36
+    TOYOTA_STARTER_CNT: 1
+    TOYOTA_TPS: 0.00763
+    TOYOTA_VVTOT: 85
+    TOYOTA_VVT_ADV_FAIL: 0
+  response: |-
+    7E810236151000003DC
+    7E8210100317D4C7373
+    7E8223A3A00011BF102
+    7E82399002380009528
+    7E82480008000851100
+    7E82500000000000000
+    7E803410D00
+    7E80441100258
+- expected_values:
     TOYOTA_AC_AMB_T: 15
     TOYOTA_AC_FB: 0
     TOYOTA_ELEC_LOAD_FB: 0
