--- a/tests/test_cases/2018/commands/7E0.7E8.2185.yaml
+++ b/tests/test_cases/2018/commands/7E0.7E8.2185.yaml
@@ -19,6 +19,14 @@ test_cases:
     TOYOTA_TQC_LOCKUP: 0
   response: |-
     7E8056185010010
+    7E803410D00
+    7E80441100200
+- expected_values:
+    TOYOTA_GEAR: 1
+    TOYOTA_GEAR_V2: 1
+    TOYOTA_TQC_LOCKUP: 0
+  response: |-
+    7E8056185010010
     7E804410C0F00
     7E803410D12
     7E804411003EB
