--- a/tests/test_cases/2023/commands/700.708.221019.yaml
+++ b/tests/test_cases/2023/commands/700.708.221019.yaml
@@ -1,5 +1,17 @@
 command_id: 700.708.221019
 test_cases:
 - expected_values:
+    TOYOTA_INJECTION: DIRECT
+  response: '7080762101901528000'
+- expected_values:
+    TOYOTA_INJECTION: DIRECT
+  response: 70807621019015C8000
+- expected_values:
+    TOYOTA_INJECTION: BOTH
+  response: '7080762101902268000'
+- expected_values:
+    TOYOTA_INJECTION: BOTH
+  response: '7080762101902818000'
+- expected_values:
     TOYOTA_INJECTION: BOTH
   response: 7080762101902EA8000
