--- a/tests/test_cases/2023/commands/700.708.22102A.yaml
+++ b/tests/test_cases/2023/commands/700.708.22102A.yaml
@@ -19,6 +19,24 @@ test_cases:
     708100862102A818180
     708217D7E0000000000
 - expected_values:
+    TOYOTA_A_F_RATIO_LEARNED_HIGH_BANK_1: 0.98039
+    TOYOTA_A_F_RATIO_LEARNED_IDLE_BANK_1: 2.15686
+    TOYOTA_A_F_RATIO_LEARNED_LOW_BANK_1: 2.54902
+    TOYOTA_A_F_RATIO_LEARNED_MID_1_BANK_1: -2.94118
+    TOYOTA_A_F_RATIO_LEARNED_MID_2_BANK_1: 2.15686
+  response: |-
+    708100862102A858678
+    7082185820000000000
+- expected_values:
+    TOYOTA_A_F_RATIO_LEARNED_HIGH_BANK_1: 0.98039
+    TOYOTA_A_F_RATIO_LEARNED_IDLE_BANK_1: 2.15686
+    TOYOTA_A_F_RATIO_LEARNED_LOW_BANK_1: 2.54902
+    TOYOTA_A_F_RATIO_LEARNED_MID_1_BANK_1: -2.15686
+    TOYOTA_A_F_RATIO_LEARNED_MID_2_BANK_1: 2.15686
+  response: |-
+    708100862102A85867A
+    7082185820000000000
+- expected_values:
     TOYOTA_A_F_RATIO_LEARNED_HIGH_BANK_1: 3.33333
     TOYOTA_A_F_RATIO_LEARNED_IDLE_BANK_1: 4.90196
     TOYOTA_A_F_RATIO_LEARNED_LOW_BANK_1: 1.37255
