--- a/tests/test_cases/2023/commands/700.708.22108D.yaml
+++ b/tests/test_cases/2023/commands/700.708.22108D.yaml
@@ -3,3 +3,9 @@ test_cases:
 - expected_values:
     TOYOTA_INTAKE_VVT_OVER_RET_LEARN_B1: 31.76757
   response: 7080562108D0CB5
+- expected_values:
+    TOYOTA_INTAKE_VVT_OVER_RET_LEARN_B1: 33.0078
+  response: 7080562108D0D34
+- expected_values:
+    TOYOTA_INTAKE_VVT_OVER_RET_LEARN_B1: 33.02733
+  response: 7080562108D0D36
