--- a/tests/test_cases/2023/commands/700.708.221621.yaml
+++ b/tests/test_cases/2023/commands/700.708.221621.yaml
@@ -3,3 +3,6 @@ test_cases:
 - expected_values:
     TOYOTA_GEAR_V2: 1
   response: '7080462162101'
+- expected_values:
+    TOYOTA_GEAR_V2: 2
+  response: '7080462162102'
