--- a/tests/test_cases/2023/commands/700.708.221F6D.yaml
+++ b/tests/test_cases/2023/commands/700.708.221F6D.yaml
@@ -1,10 +1,50 @@
 command_id: 700.708.221F6D
 test_cases:
 - expected_values:
+    TOYOTA_HFP_ACTUAL: 7.89
+    TOYOTA_HFP_TARGET: 4000
+    TOYOTA_LOW_FUEL_PRESSURE: 420
+  response: |-
+    708100E621F6D1B0190
+    708210315000028002A
+    7082200000000000000
+- expected_values:
+    TOYOTA_HFP_ACTUAL: 15.07
+    TOYOTA_HFP_TARGET: 4000
+    TOYOTA_LOW_FUEL_PRESSURE: 460
+  response: |-
+    708100E621F6D1B0190
+    7082105E3000028002E
+    7082200000000000000
+- expected_values:
     TOYOTA_HFP_ACTUAL: 27.21
     TOYOTA_HFP_TARGET: 4000
     TOYOTA_LOW_FUEL_PRESSURE: 410
   response: |-
     708100E621F6D1B0190
     708210AA10000280029
+    7082200000000000000
+- expected_values:
+    TOYOTA_HFP_ACTUAL: 19.52
+    TOYOTA_HFP_TARGET: 4140
+    TOYOTA_LOW_FUEL_PRESSURE: 400
+  response: |-
+    708100E621F6D1B019E
+    7082107A00000280028
+    7082200000000000000
+- expected_values:
+    TOYOTA_HFP_ACTUAL: 5.91
+    TOYOTA_HFP_TARGET: 6000
+    TOYOTA_LOW_FUEL_PRESSURE: 410
+  response: |-
+    708100E621F6D1B0258
+    70821024F0000280029
+    7082200000000000000
+- expected_values:
+    TOYOTA_HFP_ACTUAL: 19.13
+    TOYOTA_HFP_TARGET: 6000
+    TOYOTA_LOW_FUEL_PRESSURE: 590
+  response: |-
+    708100E621F6D1B0258
+    708210779000000003B
     7082200000000000000
