--- a/tests/test_cases/2023/commands/701.709.220103.yaml
+++ b/tests/test_cases/2023/commands/701.709.220103.yaml
@@ -15,5 +15,8 @@ test_cases:
     TOYOTA_ODO_V5: 46376
   response: 709076201030100B528
 - expected_values:
+    TOYOTA_ODO_V5: 57933
+  response: 709076201030100E24D
+- expected_values:
     TOYOTA_ODO_V5: 17035
   response: 709076201030200428B
