--- a/tests/test_cases/2023/commands/701.709.22162B.yaml
+++ b/tests/test_cases/2023/commands/701.709.22162B.yaml
@@ -3,3 +3,6 @@ test_cases:
 - expected_values:
     TOYOTA_ATF_THERMAL_DEGRAD_EST: 1202
   response: 7090562162B04B2
+- expected_values:
+    TOYOTA_ATF_THERMAL_DEGRAD_EST: 1462
+  response: 7090562162B05B6
