--- a/tests/test_cases/2023/commands/7B0.7B8.221006.yaml
+++ b/tests/test_cases/2023/commands/7B0.7B8.221006.yaml
@@ -6,6 +6,15 @@ test_cases:
     221006
     7B8056210067700
 - expected_values:
+    TOYOTA_MASTER_CYL_TEMP: 31
+  response: 7B8056210066F00
+- expected_values:
+    TOYOTA_MASTER_CYL_TEMP: 32
+  response: 7B8056210067000
+- expected_values:
+    TOYOTA_MASTER_CYL_TEMP: 33
+  response: 7B8056210067100
+- expected_values:
     TOYOTA_MASTER_CYL_TEMP: 35
   response: 7B8056210067300
 - expected_values:
