--- a/tests/test_cases/2023/commands/7D2.7DA.2215EE.yaml
+++ b/tests/test_cases/2023/commands/7D2.7DA.2215EE.yaml
@@ -7,5 +7,8 @@ test_cases:
     TOYOTA_12V_V_V2: 11.96274
   response: 7DA056215EE26FC
 - expected_values:
+    TOYOTA_12V_V_V2: 12.90618
+  response: 7DA056215EE2900
+- expected_values:
     TOYOTA_12V_V_V2: 14.1641
   response: 7DA056215EE2D06
