--- a/tests/test_cases/2023/commands/7D2.7DA.2215F8.yaml
+++ b/tests/test_cases/2023/commands/7D2.7DA.2215F8.yaml
@@ -1,6 +1,9 @@
 command_id: 7D2.7DA.2215F8
 test_cases:
 - expected_values:
+    TOYOTA_12V_T: 22.5
+  response: 7DA056215F80271
+- expected_values:
     TOYOTA_12V_T: 32.5
   response: 7DA056215F802D5
 - expected_values:
