--- a/tests/test_cases/2018/commands/7C0.7C8.2141.yaml
+++ b/tests/test_cases/2018/commands/7C0.7C8.2141.yaml
@@ -21,3 +21,6 @@ test_cases:
 - expected_values:
     TOYOTA_OIL_CHANGE_ODO: 2092.1472
   response: 7C80361410D
+- expected_values:
+    TOYOTA_OIL_CHANGE_ODO: 2574.9504
+  response: 7C803614110
