Update command data for Toyota/Tundra

--- a/tests/test_cases/2021/commands/7E0.7E8.2128.yaml
+++ b/tests/test_cases/2021/commands/7E0.7E8.2128.yaml
@@ -9,3 +9,6 @@ test_cases:
 - expected_values:
     TOYOTA_ODO: 50433
   response: 7E805612800C501
+- expected_values:
+    TOYOTA_ODO: 86044
+  response: 7E805612801501C
