--- a/tests/test_cases/2021/commands/7E0.7E8.2151.yaml
+++ b/tests/test_cases/2021/commands/7E0.7E8.2151.yaml
@@ -1255,6 +1255,39 @@ test_cases:
     7E824803B8305800000
     7E82500000000000000
 - expected_values:
+    TOYOTA_AC_AMB_T: 0
+    TOYOTA_AC_FB: 0
+    TOYOTA_ELEC_LOAD_FB: 0.03906
+    TOYOTA_ENG_SPD_START_OFF: 842.96875
+    TOYOTA_ENG_START_HESIT: 0
+    TOYOTA_ENG_START_T: 0
+    TOYOTA_EOT: 23
+    TOYOTA_EOT_V3: 23
+    TOYOTA_IMMOB_FUEL_CUT: 0
+    TOYOTA_ISC_FB: 0.04639
+    TOYOTA_ISC_FLOW: 8.38257
+    TOYOTA_ISC_LEARN: 4.77905
+    TOYOTA_ISC_POS: 4.89807
+    TOYOTA_LOW_RPM_CTRL: 0
+    TOYOTA_LOW_RPM_START: 0
+    TOYOTA_NEUTRAL_CTRL: 0
+    TOYOTA_N_RANGE_STS: 1
+    TOYOTA_PREV_TRIP_AMB_T: 0
+    TOYOTA_PREV_TRIP_DST: 0
+    TOYOTA_PREV_TRIP_EOT: 23
+    TOYOTA_PREV_TRIP_IAT: 9
+    TOYOTA_STARTER_CNT: 1
+    TOYOTA_TPS: 0
+    TOYOTA_VVTOT: 54
+    TOYOTA_VVT_ADV_FAIL: 0
+  response: |-
+    7E81023615100000437
+    7E8210100005E313F3F
+    7E822282800001AD302
+    7E82382001C80268F4B
+    7E82480208000800080
+    7E82500000000000000
+- expected_values:
     TOYOTA_AC_AMB_T: 21
     TOYOTA_AC_FB: 0
     TOYOTA_ELEC_LOAD_FB: 0
