Update command data for Toyota/Tundra

--- a/tests/test_cases/2021/commands/750.758.2130|e=2A,ta=2A,fc=1.yaml
+++ b/tests/test_cases/2021/commands/750.758.2130|e=2A,ta=2A,fc=1.yaml
@@ -1,6 +1,30 @@
 command_id: 750.758.2130|e=2A,ta=2A,fc=1
 test_cases:
 - expected_values:
+    TOYOTA_TIRE_P_FL: 2.03448
+    TOYOTA_TIRE_P_FR: 1.96552
+    TOYOTA_TIRE_P_RL: 2.06897
+    TOYOTA_TIRE_P_RR: 1.96552
+    TOYOTA_TP_FL: 2.03448
+    TOYOTA_TP_FR: 1.96552
+    TOYOTA_TP_RL: 2.06897
+    TOYOTA_TP_RR: 1.96552
+  response: |-
+    7582A10076130938F95
+    7582A218F0000000000
+- expected_values:
+    TOYOTA_TIRE_P_FL: 2.03448
+    TOYOTA_TIRE_P_FR: 1.96552
+    TOYOTA_TIRE_P_RL: 2.06897
+    TOYOTA_TIRE_P_RR: 1.98276
+    TOYOTA_TP_FL: 2.03448
+    TOYOTA_TP_FR: 1.96552
+    TOYOTA_TP_RL: 2.06897
+    TOYOTA_TP_RR: 1.98276
+  response: |-
+    7582A10076130938F95
+    7582A21900000000000
+- expected_values:
     TOYOTA_TIRE_P_FL: 2.15517
     TOYOTA_TIRE_P_FR: 2.06897
     TOYOTA_TIRE_P_RL: 2.24138
