--- a/tests/test_cases/2021/commands/7C4.7CC.213C.yaml
+++ b/tests/test_cases/2021/commands/7C4.7CC.213C.yaml
@@ -1,6 +1,12 @@
 command_id: 7C4.7CC.213C
 test_cases:
 - expected_values:
+    TOYOTA_BLOWER_MOTOR_SPEED_LEVEL: 24
+  response: 7CC03613C18
+- expected_values:
+    TOYOTA_BLOWER_MOTOR_SPEED_LEVEL: 26
+  response: 7CC03613C1A
+- expected_values:
     TOYOTA_BLOWER_MOTOR_SPEED_LEVEL: 27
   response: 7CC03613C1B
 - expected_values:
