--- a/tests/test_cases/2021/commands/7E0.7E8.2105.yaml
+++ b/tests/test_cases/2021/commands/7E0.7E8.2105.yaml
@@ -30,3 +30,15 @@ test_cases:
   response: |-
     7E8100C61054CB4112E
     7E821112E0D560D5600
+- expected_values:
+    TOYOTA_CATALYST_T_B1S1: 410.6
+    TOYOTA_CATALYST_T_B1S2: 410.6
+  response: |-
+    7E8100C61054D15119A
+    7E821119A0E740E7400
+- expected_values:
+    TOYOTA_CATALYST_T_B1S1: 411.2
+    TOYOTA_CATALYST_T_B1S2: 411.2
+  response: |-
+    7E8100C61054D1911A0
+    7E82111A00E8D0E8D00
