--- a/tests/test_cases/2021/commands/7E0.7E8.2151.yaml
+++ b/tests/test_cases/2021/commands/7E0.7E8.2151.yaml
@@ -1024,6 +1024,39 @@ test_cases:
     7E82480008000800000
     7E82500000000000000
 - expected_values:
+    TOYOTA_AC_AMB_T: -8
+    TOYOTA_AC_FB: 0
+    TOYOTA_ELEC_LOAD_FB: 0
+    TOYOTA_ENG_SPD_START_OFF: 700
+    TOYOTA_ENG_START_HESIT: 0
+    TOYOTA_ENG_START_T: 0
+    TOYOTA_EOT: 32
+    TOYOTA_EOT_V3: 32
+    TOYOTA_IMMOB_FUEL_CUT: 0
+    TOYOTA_ISC_FB: -0.18066
+    TOYOTA_ISC_FLOW: 7.98828
+    TOYOTA_ISC_LEARN: 4.77905
+    TOYOTA_ISC_POS: 4.69971
+    TOYOTA_LOW_RPM_CTRL: 0
+    TOYOTA_LOW_RPM_START: 0
+    TOYOTA_NEUTRAL_CTRL: 0
+    TOYOTA_N_RANGE_STS: 1
+    TOYOTA_PREV_TRIP_AMB_T: -8
+    TOYOTA_PREV_TRIP_DST: 0
+    TOYOTA_PREV_TRIP_EOT: 32
+    TOYOTA_PREV_TRIP_IAT: 2
+    TOYOTA_STARTER_CNT: 1
+    TOYOTA_TPS: 0
+    TOYOTA_VVTOT: 65
+    TOYOTA_VVT_ADV_FAIL: 0
+  response: |-
+    7E81023615100000380
+    7E821010000692A4848
+    7E82220200000199002
+    7E8236800147F6C8F4B
+    7E82480008000800080
+    7E82500000000000000
+- expected_values:
     TOYOTA_AC_AMB_T: 18
     TOYOTA_AC_FB: 0
     TOYOTA_ELEC_LOAD_FB: 0.21851
