--- a/tests/test_cases/2021/commands/7C4.2143.yaml
+++ b/tests/test_cases/2021/commands/7C4.2143.yaml
@@ -1,5 +1,8 @@
 command_id: 7C4.2143
 test_cases:
 - expected_values:
+    TOYOTA_AIR_OUTLET_SERVO_PULSE_D: 70
+  response: 7CC03614346
+- expected_values:
     TOYOTA_AIR_OUTLET_SERVO_PULSE_D: 97
   response: 7CC03614361
