--- a/tests/test_cases/2021/commands/7C4.7CC.2122.yaml
+++ b/tests/test_cases/2021/commands/7C4.7CC.2122.yaml
@@ -1,6 +1,15 @@
 command_id: 7C4.7CC.2122
 test_cases:
 - expected_values:
+    TOYOTA_AAT_7C4: -4.05
+  response: 7CC03612237
+- expected_values:
+    TOYOTA_AAT_7C4: -3.7
+  response: 7CC03612238
+- expected_values:
+    TOYOTA_AAT_7C4: -3.35
+  response: 7CC03612239
+- expected_values:
     TOYOTA_AAT_7C4: 2.25
   response: 7CC03612249
 - expected_values:
