--- a/tests/test_cases/2021/commands/7C4.7CC.213D.yaml
+++ b/tests/test_cases/2021/commands/7C4.7CC.213D.yaml
@@ -1,5 +1,8 @@
 command_id: 7C4.7CC.213D
 test_cases:
 - expected_values:
+    TOYOTA_ADJUSTED_AMBIENT_T: -7.44
+  response: 7CC03613D49
+- expected_values:
     TOYOTA_ADJUSTED_AMBIENT_T: 1.2
   response: 7CC03613D64
