--- a/tests/test_cases/2021/commands/7E0.7E8.2101.yaml
+++ b/tests/test_cases/2021/commands/7E0.7E8.2101.yaml
@@ -29,6 +29,32 @@ test_cases:
 - expected_values:
     TOYOTA_AAT: 58
     TOYOTA_ACCEL_SENS_NO_1_VOLT: 32.15686
+    TOYOTA_ACCEL_SENS_NO_2_VOLT: 17.2549
+    TOYOTA_ATMOSPHERE_PRESSURE: 107
+    TOYOTA_CALCULATED_LOAD_7E0: 32.94118
+    TOYOTA_COOLANT_TEMP: -27
+    TOYOTA_ENGINE_RUN_TIME: 24320
+    TOYOTA_ENGINE_SPEED: 16383
+    TOYOTA_INTAKE_AIR: 3
+    TOYOTA_MAF: 655.35
+    TOYOTA_MAP: 43
+    TOYOTA_THROTTLE_MOTOR_DUTY: 100
+    TOYOTA_THROTTLE_SENSOR_POSITION: 17.2549
+    TOYOTA_THROTTLE_SENSOR_VOLT: 49.01961
+    TOYOTA_THROTTL_SENSOR_2_VOLT: 16.07843
+    TOYOTA_TIME_AFTER_DTC_CLEARED: 65334
+    TOYOTA_VEHICLE_LOAD: 0.05646
+    TOYOTA_VEHICLE_SPEED: 3
+    TOYOTA_WARMUP_CYCLE_CLEARED_DTC: 255
+  response: |-
+    7E8101D610154002502
+    7E821CD2B2B626B0D99
+    7E82200035F002C7D29
+    7E823522CFFFFFFFFFF
+    7E82436040000000000
+- expected_values:
+    TOYOTA_AAT: 58
+    TOYOTA_ACCEL_SENS_NO_1_VOLT: 32.15686
     TOYOTA_ACCEL_SENS_NO_2_VOLT: 16.86275
     TOYOTA_ATMOSPHERE_PRESSURE: 106
     TOYOTA_CALCULATED_LOAD_7E0: 33.33333
@@ -104,6 +130,58 @@ test_cases:
     7E8220002A9002C7D29
     7E823522CFFFFFFFFFF
     7E82435A20000000000
+- expected_values:
+    TOYOTA_AAT: 58
+    TOYOTA_ACCEL_SENS_NO_1_VOLT: 32.15686
+    TOYOTA_ACCEL_SENS_NO_2_VOLT: 17.2549
+    TOYOTA_ATMOSPHERE_PRESSURE: 106
+    TOYOTA_CALCULATED_LOAD_7E0: 33.33333
+    TOYOTA_COOLANT_TEMP: -26
+    TOYOTA_ENGINE_RUN_TIME: 64512
+    TOYOTA_ENGINE_SPEED: 16383
+    TOYOTA_INTAKE_AIR: 3
+    TOYOTA_MAF: 655.35
+    TOYOTA_MAP: 43
+    TOYOTA_THROTTLE_MOTOR_DUTY: 100
+    TOYOTA_THROTTLE_SENSOR_POSITION: 17.2549
+    TOYOTA_THROTTLE_SENSOR_VOLT: 49.41176
+    TOYOTA_THROTTL_SENSOR_2_VOLT: 16.07843
+    TOYOTA_TIME_AFTER_DTC_CLEARED: 65334
+    TOYOTA_VEHICLE_LOAD: 0.05798
+    TOYOTA_VEHICLE_SPEED: 2
+    TOYOTA_WARMUP_CYCLE_CLEARED_DTC: 255
+  response: |-
+    7E8101D610155002603
+    7E821112B2B626A0E99
+    7E8220002FC002C7E29
+    7E823522CFFFFFFFFFF
+    7E824362B0000000000
+- expected_values:
+    TOYOTA_AAT: 58
+    TOYOTA_ACCEL_SENS_NO_1_VOLT: 32.15686
+    TOYOTA_ACCEL_SENS_NO_2_VOLT: 17.64706
+    TOYOTA_ATMOSPHERE_PRESSURE: 105
+    TOYOTA_CALCULATED_LOAD_7E0: 33.33333
+    TOYOTA_COOLANT_TEMP: -25
+    TOYOTA_ENGINE_RUN_TIME: 52224
+    TOYOTA_ENGINE_SPEED: 16383
+    TOYOTA_INTAKE_AIR: 2
+    TOYOTA_MAF: 655.35
+    TOYOTA_MAP: 42
+    TOYOTA_THROTTLE_MOTOR_DUTY: 100
+    TOYOTA_THROTTLE_SENSOR_POSITION: 17.64706
+    TOYOTA_THROTTLE_SENSOR_VOLT: 49.80392
+    TOYOTA_THROTTL_SENSOR_2_VOLT: 16.07843
+    TOYOTA_TIME_AFTER_DTC_CLEARED: 65334
+    TOYOTA_VEHICLE_LOAD: 0.05798
+    TOYOTA_VEHICLE_SPEED: 2
+    TOYOTA_WARMUP_CYCLE_CLEARED_DTC: 255
+  response: |-
+    7E8101D610155002603
+    7E8214D2A2A62690F7D
+    7E8220002CC002D7F29
+    7E823522DFFFFFFFFFF
+    7E824363E0000000000
 - expected_values:
     TOYOTA_AAT: 58
     TOYOTA_ACCEL_SENS_NO_1_VOLT: 32.15686
