--- a/tests/test_cases/2025/commands/700.708.2210A2.yaml
+++ b/tests/test_cases/2025/commands/700.708.2210A2.yaml
@@ -85,6 +85,20 @@ test_cases:
     70810086210A28D8788
     70821A69F0000000000
 - expected_values:
+    TOYOTA_AFRL_HIGH_1: 11.71294
+    TOYOTA_AFRL_IDLE_1: 5.46353
+    TOYOTA_AFRL_LOW_1: 2.72941
+    TOYOTA_AFRL_MID_1_1: 5.07294
+    TOYOTA_AFRL_MID_2_1: 12.10353
+    TOYOTA_AF_LEARN_HIGH_PORT_B1: 11.96078
+    TOYOTA_AF_LEARN_IDLE_PORT_B1: 5.68627
+    TOYOTA_AF_LEARN_LOW_PORT_B1: 2.94118
+    TOYOTA_AF_LEARN_MID1_PORT_B1: 5.29412
+    TOYOTA_AF_LEARN_MID2_PORT_B1: 12.35294
+  response: |-
+    70810086210A28E878D
+    708219F9E0000000000
+- expected_values:
     TOYOTA_AFRL_HIGH_1: 10.54118
     TOYOTA_AFRL_IDLE_1: 5.85412
     TOYOTA_AFRL_LOW_1: 1.55765
@@ -113,16 +127,16 @@ test_cases:
     70810086210A2908F8C
     70821A5980000000000
 - expected_values:
-    TOYOTA_AFRL_HIGH_1: 6.63529
-    TOYOTA_AFRL_IDLE_1: 9.36941
-    TOYOTA_AFRL_LOW_1: 0
-    TOYOTA_AFRL_MID_1_1: 7.02588
-    TOYOTA_AFRL_MID_2_1: 9.76
-    TOYOTA_AF_LEARN_HIGH_PORT_B1: 6.86275
-    TOYOTA_AF_LEARN_IDLE_PORT_B1: 9.60784
-    TOYOTA_AF_LEARN_LOW_PORT_B1: -1.76471
-    TOYOTA_AF_LEARN_MID1_PORT_B1: 7.2549
-    TOYOTA_AF_LEARN_MID2_PORT_B1: 10
+    TOYOTA_AFRL_HIGH_1: 11.71294
+    TOYOTA_AFRL_IDLE_1: 11.32235
+    TOYOTA_AFRL_LOW_1: 2.33882
+    TOYOTA_AFRL_MID_1_1: 5.07294
+    TOYOTA_AFRL_MID_2_1: 12.10353
+    TOYOTA_AF_LEARN_HIGH_PORT_B1: 11.96078
+    TOYOTA_AF_LEARN_IDLE_PORT_B1: 11.56863
+    TOYOTA_AF_LEARN_LOW_PORT_B1: 2.54902
+    TOYOTA_AF_LEARN_MID1_PORT_B1: 5.29412
+    TOYOTA_AF_LEARN_MID2_PORT_B1: 12.35294
   response: |-
-    70810086210A2987B92
-    7082199910000000000
+    70810086210A29D868D
+    708219F9E0000000000
