Update command data for Toyota/Tundra

--- a/tests/test_cases/2025/commands/700.708.221002.yaml
+++ b/tests/test_cases/2025/commands/700.708.221002.yaml
@@ -1,8 +1,8 @@
 command_id: 700.708.221002
 test_cases:
 - expected_values:
-    TOYOTA_12V_V: 11.0156
-  response: '708056210022340'
+    TOYOTA_12V_V: 9.624
+  response: 708056210021ECC
 - expected_values:
     TOYOTA_12V_V: 12.49509
   response: 7080562100227FC
