Update command data for Toyota/Tundra

--- a/tests/test_cases/2025/commands/700.708.221627.yaml
+++ b/tests/test_cases/2025/commands/700.708.221627.yaml
@@ -4,8 +4,8 @@ test_cases:
     TOYOTA_ATF_T_PAN_V3: -40
   response: '708056216270000'
 - expected_values:
-    TOYOTA_ATF_T_PAN_V3: 11.875
-  response: '7080562162733E0'
+    TOYOTA_ATF_T_PAN_V3: 6.875
+  response: 708056216272EE0
 - expected_values:
     TOYOTA_ATF_T_PAN_V3: 90
   response: '708056216278200'
