--- a/tests/test_cases/2025/commands/701.709.221627.yaml
+++ b/tests/test_cases/2025/commands/701.709.221627.yaml
@@ -1,10 +1,10 @@
 command_id: 701.709.221627
 test_cases:
 - expected_values:
-    TOYOTA_ATF_T_PAN: 11
-    TOYOTA_TF1_PAN: 51.8
-    TOYOTA_TFP_T: 11
-  response: '709056216273300'
+    TOYOTA_ATF_T_PAN: 5
+    TOYOTA_TF1_PAN: 41
+    TOYOTA_TFP_T: 5
+  response: 709056216272D00
 - expected_values:
     TOYOTA_ATF_T_PAN: 101
     TOYOTA_TF1_PAN: 213.8
