--- a/tests/test_cases/2018/commands/7E0.7E8.2101.yaml
+++ b/tests/test_cases/2018/commands/7E0.7E8.2101.yaml
@@ -1,8 +1,25 @@
 command_id: 7E0.7E8.2101
 test_cases:
 - expected_values:
+    TOYOTA_AAT: 62
+    TOYOTA_ACCEL_SENS_NO_1_VOLT: 36.47059
+    TOYOTA_ACCEL_SENS_NO_2_VOLT: 19.21569
+    TOYOTA_ATMOSPHERE_PRESSURE: 100
     TOYOTA_CALCULATED_LOAD_7E0: 21.56863
+    TOYOTA_COOLANT_TEMP: -22
+    TOYOTA_ENGINE_RUN_TIME: 15362
+    TOYOTA_ENGINE_SPEED: 16383
+    TOYOTA_INTAKE_AIR: 28
+    TOYOTA_MAF: 655.35
+    TOYOTA_MAP: 68
+    TOYOTA_THROTTLE_MOTOR_DUTY: 100
+    TOYOTA_THROTTLE_SENSOR_POSITION: 18.82353
+    TOYOTA_THROTTLE_SENSOR_VOLT: 51.37255
+    TOYOTA_THROTTL_SENSOR_2_VOLT: 20.78431
+    TOYOTA_TIME_AFTER_DTC_CLEARED: 36405
     TOYOTA_VEHICLE_LOAD: 0.05646
+    TOYOTA_VEHICLE_SPEED: 0
+    TOYOTA_WARMUP_CYCLE_CLEARED_DTC: 78
   response: |-
     7E8101D610137002503
     7E821D24444666412A7
@@ -10,8 +27,25 @@ test_cases:
     7E8235D31FF2C4E348E
     7E82435B60000000000
 - expected_values:
+    TOYOTA_AAT: 62
+    TOYOTA_ACCEL_SENS_NO_1_VOLT: 32.15686
+    TOYOTA_ACCEL_SENS_NO_2_VOLT: 20.39216
+    TOYOTA_ATMOSPHERE_PRESSURE: 76
     TOYOTA_CALCULATED_LOAD_7E0: 29.80392
+    TOYOTA_COOLANT_TEMP: -22
+    TOYOTA_ENGINE_RUN_TIME: 19204
+    TOYOTA_ENGINE_SPEED: 8960
+    TOYOTA_INTAKE_AIR: 28
+    TOYOTA_MAF: 655.35
+    TOYOTA_MAP: 68
+    TOYOTA_THROTTLE_MOTOR_DUTY: 100
+    TOYOTA_THROTTLE_SENSOR_POSITION: 20.39216
+    TOYOTA_THROTTLE_SENSOR_VOLT: 52.94118
+    TOYOTA_THROTTL_SENSOR_2_VOLT: 15.68627
+    TOYOTA_TIME_AFTER_DTC_CLEARED: 14901
     TOYOTA_VEHICLE_LOAD: 0.08392
+    TOYOTA_VEHICLE_SPEED: 0
+    TOYOTA_WARMUP_CYCLE_CLEARED_DTC: 48
   response: |-
     7E8101D61014C003705
     7E821864444664C1223
@@ -19,8 +53,25 @@ test_cases:
     7E8235234FF2C30343A
     7E82435C90000000000
 - expected_values:
+    TOYOTA_AAT: 61
+    TOYOTA_ACCEL_SENS_NO_1_VOLT: 32.15686
+    TOYOTA_ACCEL_SENS_NO_2_VOLT: 17.2549
+    TOYOTA_ATMOSPHERE_PRESSURE: 125
     TOYOTA_CALCULATED_LOAD_7E0: 30.19608
+    TOYOTA_COOLANT_TEMP: -31
+    TOYOTA_ENGINE_RUN_TIME: 63232
+    TOYOTA_ENGINE_SPEED: 16383
+    TOYOTA_INTAKE_AIR: 36
+    TOYOTA_MAF: 565
+    TOYOTA_MAP: 76
+    TOYOTA_THROTTLE_MOTOR_DUTY: 100
+    TOYOTA_THROTTLE_SENSOR_POSITION: 17.2549
+    TOYOTA_THROTTLE_SENSOR_VOLT: 49.41176
+    TOYOTA_THROTTL_SENSOR_2_VOLT: 16.07843
+    TOYOTA_TIME_AFTER_DTC_CLEARED: 27443
     TOYOTA_VEHICLE_LOAD: 0.06409
+    TOYOTA_VEHICLE_SPEED: 3
+    TOYOTA_WARMUP_CYCLE_CLEARED_DTC: 98
   response: |-
     7E8101D61014D002A02
     7E821354C4C657D0969
@@ -28,8 +79,25 @@ test_cases:
     7E823522CFF3062396B
     7E824336C0000000000
 - expected_values:
+    TOYOTA_AAT: 61
+    TOYOTA_ACCEL_SENS_NO_1_VOLT: 36.47059
+    TOYOTA_ACCEL_SENS_NO_2_VOLT: 20.78431
+    TOYOTA_ATMOSPHERE_PRESSURE: 88
     TOYOTA_CALCULATED_LOAD_7E0: 37.2549
+    TOYOTA_COOLANT_TEMP: -24
+    TOYOTA_ENGINE_RUN_TIME: 47108
+    TOYOTA_ENGINE_SPEED: 12822
+    TOYOTA_INTAKE_AIR: 18
+    TOYOTA_MAF: 655.35
+    TOYOTA_MAP: 58
+    TOYOTA_THROTTLE_MOTOR_DUTY: 98.03922
+    TOYOTA_THROTTLE_SENSOR_POSITION: 20.39216
+    TOYOTA_THROTTLE_SENSOR_VOLT: 53.33333
+    TOYOTA_THROTTL_SENSOR_2_VOLT: 20.78431
+    TOYOTA_TIME_AFTER_DTC_CLEARED: 45365
     TOYOTA_VEHICLE_LOAD: 0.09918
+    TOYOTA_VEHICLE_SPEED: 0
+    TOYOTA_WARMUP_CYCLE_CLEARED_DTC: 123
   response: |-
     7E8101D61015F004105
     7E821DA3A3A65581032
