--- a/tests/test_cases/2018/commands/7E0.7E8.2104.yaml
+++ b/tests/test_cases/2018/commands/7E0.7E8.2104.yaml
@@ -1,7 +1,10 @@
 command_id: 7E0.7E8.2104
 test_cases:
 - expected_values:
+    TOYOTA_AFS_CURRENT_B1S1: 127.99
+    TOYOTA_AFS_VOLTAGE_B1S1: 3.20807
     TOYOTA_AF_LAMBDA_B1S1: 0.98387
+    TOYOTA_O2S_B1S2: 0.63
     TOYOTA_TARGET_AIR_FUEL_RATIO: 0.99459
   response: |-
     7E8044110045E
