--- a/tests/test_cases/2023/commands/700.708.221075.yaml
+++ b/tests/test_cases/2023/commands/700.708.221075.yaml
@@ -5,6 +5,9 @@ test_cases:
   response: 7080562107580CD
 - expected_values:
     TOYOTA_IWP_SPEED: 300
+  response: 708056210758C28
+- expected_values:
+    TOYOTA_IWP_SPEED: 300
   response: 7080562107593B2
 - expected_values:
     TOYOTA_IWP_SPEED: 300
