--- a/tests/test_cases/2024/commands/750.758.221004|e=2A,ta=2A,fc=1.yaml
+++ b/tests/test_cases/2024/commands/750.758.221004|e=2A,ta=2A,fc=1.yaml
@@ -4,6 +4,8 @@ test_cases:
     TOYOTA_TT_FL_V2: -40
     TOYOTA_TT_FR_V2: -40
     TOYOTA_TT_RL_V2: -40
+    TOYOTA_TT_RR_V2: -40
+    TOYOTA_TT_SPARE_V2: -40
   response: |-
     7582A10086210040000
     7582A21000000000000
@@ -12,14 +14,19 @@ test_cases:
     TOYOTA_TT_FL_V2: -40
     TOYOTA_TT_FR_V2: -40
     TOYOTA_TT_RL_V2: 40
+    TOYOTA_TT_RR_V2: -40
+    TOYOTA_TT_SPARE_V2: -40
   response: |-
     7582A10086210040000
     7582A21500000000000
 - expected_values:
     TOYOTA_TT_2_V2: 23
+    TOYOTA_TT_4_V2: 23
     TOYOTA_TT_FL_V2: -40
     TOYOTA_TT_FR_V2: 23
     TOYOTA_TT_RL_V2: -40
+    TOYOTA_TT_RR_V2: 23
+    TOYOTA_TT_SPARE_V2: -40
   response: |-
     7582A1008621004003F
     7582A21003F00000000
@@ -27,9 +34,12 @@ test_cases:
     TOYOTA_TT_1_V2: 34
     TOYOTA_TT_2_V2: 35
     TOYOTA_TT_3_V2: 39
+    TOYOTA_TT_4_V2: 42
     TOYOTA_TT_FL_V2: 34
     TOYOTA_TT_FR_V2: 35
     TOYOTA_TT_RL_V2: 39
+    TOYOTA_TT_RR_V2: 42
+    TOYOTA_TT_SPARE_V2: -40
   response: |-
     7582A10086210044A4B
     7582A214F5200000000
@@ -37,9 +47,12 @@ test_cases:
     TOYOTA_TT_1_V2: 44
     TOYOTA_TT_2_V2: 55
     TOYOTA_TT_3_V2: 42
+    TOYOTA_TT_4_V2: 45
     TOYOTA_TT_FL_V2: 44
     TOYOTA_TT_FR_V2: 55
     TOYOTA_TT_RL_V2: 42
+    TOYOTA_TT_RR_V2: 45
+    TOYOTA_TT_SPARE_V2: -40
   response: |-
     7582A1008621004545F
     7582A21525500000000
@@ -47,9 +60,12 @@ test_cases:
     TOYOTA_TT_1_V2: 54
     TOYOTA_TT_2_V2: 52
     TOYOTA_TT_3_V2: 50
+    TOYOTA_TT_4_V2: 51
     TOYOTA_TT_FL_V2: 54
     TOYOTA_TT_FR_V2: 52
     TOYOTA_TT_RL_V2: 50
+    TOYOTA_TT_RR_V2: 51
+    TOYOTA_TT_SPARE_V2: -40
   response: |-
     7582A10086210045E5C
     7582A215A5B00000000
