--- a/tests/test_cases/2024/commands/7D2.7DA.22106C|fc=1.yaml
+++ b/tests/test_cases/2024/commands/7D2.7DA.22106C|fc=1.yaml
@@ -14,7 +14,9 @@ test_cases:
   response: 7DA0662106C7D967D
 - expected_values:
     TOYOTA_HVBAT_SOC_MAX: 66.5
+    TOYOTA_HVBAT_SOC_MIN: 66
   response: 7DA0662106C848584
 - expected_values:
     TOYOTA_HVBAT_SOC_MAX: 67.5
+    TOYOTA_HVBAT_SOC_MIN: 63
   response: 7DA0662106C87877E
