--- a/tests/test_cases/2008/commands/7E0.7E8.2121.yaml
+++ b/tests/test_cases/2008/commands/7E0.7E8.2121.yaml
@@ -5,5 +5,6 @@ test_cases:
     TOYOTA_CC_VSS: 0
   response: '7E80461210000'
 - expected_values:
+    TOYOTA_CC_S: 176
     TOYOTA_CC_VSS: 0
   response: 7E804612100B0
