--- a/tests/test_cases/2012/commands/7E0.7E8.2121.yaml
+++ b/tests/test_cases/2012/commands/7E0.7E8.2121.yaml
@@ -1,5 +1,17 @@
 command_id: 7E0.7E8.2121
 test_cases:
 - expected_values:
+    TOYOTA_CC_CANCEL_SWITCH_ON: 0
+    TOYOTA_CC_CCS_INDICATOR_M_CPU_ON: 0
+    TOYOTA_CC_CCS_READY_M_CPU_ON: 0
+    TOYOTA_CC_CC_ON: 0
+    TOYOTA_CC_DRIVING_FORCE: -51.2
+    TOYOTA_CC_LIVE_SET_COAST_SWITCH_ON: 0
+    TOYOTA_CC_MAIN_SW_M_CPU_ON: 0
+    TOYOTA_CC_ON: 0
+    TOYOTA_CC_RES_ACC_SWITCH_ON: 0
+    TOYOTA_CC_S: 0
+    TOYOTA_CC_STOP_LIGHT_SWITCH_1_ON: 0
+    TOYOTA_CC_STOP_LIGHT_SWITCH_2_ON: 0
     TOYOTA_CC_VSS: 0
   response: '7E80761210000000000'
