--- a/tests/test_cases/2014/commands/7E0.7E8.2121.yaml
+++ b/tests/test_cases/2014/commands/7E0.7E8.2121.yaml
@@ -16,17 +16,77 @@ test_cases:
     TOYOTA_CC_VSS: 0
   response: '7E80761210000000000'
 - expected_values:
+    TOYOTA_CC_CANCEL_SWITCH_ON: 0
+    TOYOTA_CC_CCS_INDICATOR_M_CPU_ON: 0
+    TOYOTA_CC_CCS_READY_M_CPU_ON: 0
+    TOYOTA_CC_CC_ON: 0
+    TOYOTA_CC_DRIVING_FORCE: -51.2
+    TOYOTA_CC_LIVE_SET_COAST_SWITCH_ON: 0
+    TOYOTA_CC_MAIN_SW_M_CPU_ON: 0
+    TOYOTA_CC_ON: 0
+    TOYOTA_CC_RES_ACC_SWITCH_ON: 0
+    TOYOTA_CC_S: 0
+    TOYOTA_CC_STOP_LIGHT_SWITCH_1_ON: 1
+    TOYOTA_CC_STOP_LIGHT_SWITCH_2_ON: 1
     TOYOTA_CC_VSS: 0
   response: 7E807612100000000E0
 - expected_values:
+    TOYOTA_CC_CANCEL_SWITCH_ON: 0
+    TOYOTA_CC_CCS_INDICATOR_M_CPU_ON: 1
+    TOYOTA_CC_CCS_READY_M_CPU_ON: 1
+    TOYOTA_CC_CC_ON: 0
+    TOYOTA_CC_DRIVING_FORCE: -51.2
+    TOYOTA_CC_LIVE_SET_COAST_SWITCH_ON: 0
+    TOYOTA_CC_MAIN_SW_M_CPU_ON: 0
+    TOYOTA_CC_ON: 1
+    TOYOTA_CC_RES_ACC_SWITCH_ON: 0
+    TOYOTA_CC_S: 90
+    TOYOTA_CC_STOP_LIGHT_SWITCH_1_ON: 1
+    TOYOTA_CC_STOP_LIGHT_SWITCH_2_ON: 1
     TOYOTA_CC_VSS: 0
   response: 7E8076121005A00BCE0
 - expected_values:
+    TOYOTA_CC_CANCEL_SWITCH_ON: 0
+    TOYOTA_CC_CCS_INDICATOR_M_CPU_ON: 1
+    TOYOTA_CC_CCS_READY_M_CPU_ON: 1
+    TOYOTA_CC_CC_ON: 1
+    TOYOTA_CC_DRIVING_FORCE: -46
+    TOYOTA_CC_LIVE_SET_COAST_SWITCH_ON: 0
+    TOYOTA_CC_MAIN_SW_M_CPU_ON: 0
+    TOYOTA_CC_ON: 1
+    TOYOTA_CC_RES_ACC_SWITCH_ON: 0
+    TOYOTA_CC_S: 86
+    TOYOTA_CC_STOP_LIGHT_SWITCH_1_ON: 0
+    TOYOTA_CC_STOP_LIGHT_SWITCH_2_ON: 0
     TOYOTA_CC_VSS: 86
   response: 7E807612156560DFC00
 - expected_values:
+    TOYOTA_CC_CANCEL_SWITCH_ON: 0
+    TOYOTA_CC_CCS_INDICATOR_M_CPU_ON: 1
+    TOYOTA_CC_CCS_READY_M_CPU_ON: 1
+    TOYOTA_CC_CC_ON: 1
+    TOYOTA_CC_DRIVING_FORCE: -42.4
+    TOYOTA_CC_LIVE_SET_COAST_SWITCH_ON: 0
+    TOYOTA_CC_MAIN_SW_M_CPU_ON: 0
+    TOYOTA_CC_ON: 1
+    TOYOTA_CC_RES_ACC_SWITCH_ON: 0
+    TOYOTA_CC_S: 90
+    TOYOTA_CC_STOP_LIGHT_SWITCH_1_ON: 0
+    TOYOTA_CC_STOP_LIGHT_SWITCH_2_ON: 0
     TOYOTA_CC_VSS: 90
   response: 7E80761215A5A16FC00
 - expected_values:
+    TOYOTA_CC_CANCEL_SWITCH_ON: 0
+    TOYOTA_CC_CCS_INDICATOR_M_CPU_ON: 0
+    TOYOTA_CC_CCS_READY_M_CPU_ON: 0
+    TOYOTA_CC_CC_ON: 0
+    TOYOTA_CC_DRIVING_FORCE: -51.2
+    TOYOTA_CC_LIVE_SET_COAST_SWITCH_ON: 0
+    TOYOTA_CC_MAIN_SW_M_CPU_ON: 0
+    TOYOTA_CC_ON: 1
+    TOYOTA_CC_RES_ACC_SWITCH_ON: 0
+    TOYOTA_CC_S: 0
+    TOYOTA_CC_STOP_LIGHT_SWITCH_1_ON: 0
+    TOYOTA_CC_STOP_LIGHT_SWITCH_2_ON: 0
     TOYOTA_CC_VSS: 100
   response: '7E80761216400008000'
