--- a/tests/test_cases/2018/commands/7E0.7E8.2103.yaml
+++ b/tests/test_cases/2018/commands/7E0.7E8.2103.yaml
@@ -1,6 +1,8 @@
 command_id: 7E0.7E8.2103
 test_cases:
 - expected_values:
+    TOYOTA_EVAP_PURGE_DUTY: 50.98039
+    TOYOTA_IGN_ADVANCE: 128
     TOYOTA_LONG_FT_B1S1: 2.34375
     TOYOTA_SHORT_FT_B1S1: 1.5625
   response: |-
