--- a/tests/test_cases/2019/commands/7E0.7E8.2104.yaml
+++ b/tests/test_cases/2019/commands/7E0.7E8.2104.yaml
@@ -1,6 +1,10 @@
 command_id: 7E0.7E8.2104
 test_cases:
 - expected_values:
+    TOYOTA_AFS_CURRENT_B1S1: 127.99
+    TOYOTA_AFS_VOLTAGE_B1S1: 3.41777
+    TOYOTA_AF_LAMBDA_B1S1: 1.02262
+    TOYOTA_O2S_B1S2: 0.655
     TOYOTA_TARGET_AIR_FUEL_RATIO: 0.99459
   response: |-
     2104
@@ -9,6 +13,10 @@ test_cases:
     7E8228D800B849F800B
     7E8230FFF00FF000000
 - expected_values:
+    TOYOTA_AFS_CURRENT_B1S1: 127.99
+    TOYOTA_AFS_VOLTAGE_B1S1: 4.9937
+    TOYOTA_AF_LAMBDA_B1S1: 1.22673
+    TOYOTA_O2S_B1S2: 0.785
     TOYOTA_TARGET_AIR_FUEL_RATIO: 0.78495
   response: |-
     7E81018610464FA9DCF
@@ -27,6 +35,10 @@ test_cases:
     7E822E27FEE80517FFD
     7E82303FF07FF000000
 - expected_values:
+    TOYOTA_AFS_CURRENT_B1S1: 127.99
+    TOYOTA_AFS_VOLTAGE_B1S1: 4.9937
+    TOYOTA_AF_LAMBDA_B1S1: 1.22673
+    TOYOTA_O2S_B1S2: 0.785
     TOYOTA_TARGET_AIR_FUEL_RATIO: 0.8519
   response: |-
     7E8101861046D979DCF
@@ -34,6 +46,10 @@ test_cases:
     7E822CF81789DCF818F
     7E823AFFFB7FF000000
 - expected_values:
+    TOYOTA_AFS_CURRENT_B1S1: 127.99
+    TOYOTA_AFS_VOLTAGE_B1S1: 2.61798
+    TOYOTA_AF_LAMBDA_B1S1: 0.89484
+    TOYOTA_O2S_B1S2: 0.575
     TOYOTA_TARGET_AIR_FUEL_RATIO: 0.92004
   response: |-
     7E810186104765B731D
@@ -52,6 +68,10 @@ test_cases:
     7E822107FDD77D07FD8
     7E8230BFF0FFF000000
 - expected_values:
+    TOYOTA_AFS_CURRENT_B1S1: 127.99
+    TOYOTA_AFS_VOLTAGE_B1S1: 3.00812
+    TOYOTA_AF_LAMBDA_B1S1: 0.94427
+    TOYOTA_O2S_B1S2: 0.605
     TOYOTA_TARGET_AIR_FUEL_RATIO: 0.92004
   response: |-
     7E810186104765B7979
@@ -59,6 +79,10 @@ test_cases:
     7E822797FE57B957FEE
     7E8231BFF1BFF000000
 - expected_values:
+    TOYOTA_AFS_CURRENT_B1S1: 127.99
+    TOYOTA_AFS_VOLTAGE_B1S1: 3.38363
+    TOYOTA_AF_LAMBDA_B1S1: 1.0177
+    TOYOTA_O2S_B1S2: 0.65
     TOYOTA_TARGET_AIR_FUEL_RATIO: 0.96091
   response: |-
     7E8101861047B9D82EB
@@ -66,6 +90,10 @@ test_cases:
     7E822EB8008813B8000
     7E8231BFF1BFF000000
 - expected_values:
+    TOYOTA_AFS_CURRENT_B1S1: 127.99
+    TOYOTA_AFS_VOLTAGE_B1S1: 4.86423
+    TOYOTA_AF_LAMBDA_B1S1: 1.22673
+    TOYOTA_O2S_B1S2: 0.785
     TOYOTA_TARGET_AIR_FUEL_RATIO: 0.97968
   response: |-
     7E8101861047E079DCF
@@ -150,6 +178,10 @@ test_cases:
     7E822D17FFF7FA87FFE
     7E82398FF5DFF000000
 - expected_values:
+    TOYOTA_AFS_CURRENT_B1S1: 127.99
+    TOYOTA_AFS_VOLTAGE_B1S1: 3.28122
+    TOYOTA_AF_LAMBDA_B1S1: 0.99155
+    TOYOTA_O2S_B1S2: 0.635
     TOYOTA_TARGET_AIR_FUEL_RATIO: 0.99459
   response: |-
     7E8101861047FF27F8E
@@ -157,6 +189,10 @@ test_cases:
     7E8228E7FFF7FF28000
     7E823A0FFA4FF000000
 - expected_values:
+    TOYOTA_AFS_CURRENT_B1S1: 127.99
+    TOYOTA_AFS_VOLTAGE_B1S1: 3.30073
+    TOYOTA_AF_LAMBDA_B1S1: 0.99502
+    TOYOTA_O2S_B1S2: 0.64
     TOYOTA_TARGET_AIR_FUEL_RATIO: 0.99459
   response: |-
     7E8101861047FF28000
@@ -164,6 +200,10 @@ test_cases:
     7E822008000800F8000
     7E823A0FFA7FF000000
 - expected_values:
+    TOYOTA_AFS_CURRENT_B1S1: 127.99
+    TOYOTA_AFS_VOLTAGE_B1S1: 3.30073
+    TOYOTA_AF_LAMBDA_B1S1: 0.9958
+    TOYOTA_O2S_B1S2: 0.64
     TOYOTA_TARGET_AIR_FUEL_RATIO: 0.99459
   response: |-
     7E8101861047FF2801A
@@ -171,6 +211,10 @@ test_cases:
     7E8221A800080008000
     7E82394FF94FF000000
 - expected_values:
+    TOYOTA_AFS_CURRENT_B1S1: 127.99
+    TOYOTA_AFS_VOLTAGE_B1S1: 3.31048
+    TOYOTA_AF_LAMBDA_B1S1: 0.99738
+    TOYOTA_O2S_B1S2: 0.64
     TOYOTA_TARGET_AIR_FUEL_RATIO: 0.99459
   response: |-
     7E8101861047FF2804E
@@ -178,6 +222,10 @@ test_cases:
     7E8224E80017FFB8000
     7E8238CFF90FF000000
 - expected_values:
+    TOYOTA_AFS_CURRENT_B1S1: 127.99
+    TOYOTA_AFS_VOLTAGE_B1S1: 3.45679
+    TOYOTA_AF_LAMBDA_B1S1: 1.03273
+    TOYOTA_O2S_B1S2: 0.66
     TOYOTA_TARGET_AIR_FUEL_RATIO: 0.99459
   response: |-
     7E8101861047FF284DA
