--- a/tests/test_cases/2022/commands/750.758.221004|e=2A,ta=2A,fc=1.yaml
+++ b/tests/test_cases/2022/commands/750.758.221004|e=2A,ta=2A,fc=1.yaml
@@ -4,6 +4,8 @@ test_cases:
     TOYOTA_TT_FL_V2: -40
     TOYOTA_TT_FR_V2: -40
     TOYOTA_TT_RL_V2: -40
+    TOYOTA_TT_RR_V2: -40
+    TOYOTA_TT_SPARE_V2: -40
   response: |-
     7582A10086210040000
     7582A21000000000000
@@ -12,6 +14,8 @@ test_cases:
     TOYOTA_TT_FL_V2: -40
     TOYOTA_TT_FR_V2: -40
     TOYOTA_TT_RL_V2: 42
+    TOYOTA_TT_RR_V2: -40
+    TOYOTA_TT_SPARE_V2: -40
   response: |-
     7582A10086210040000
     7582A21520000000000
@@ -19,9 +23,12 @@ test_cases:
     TOYOTA_TT_1_V2: 25
     TOYOTA_TT_2_V2: 27
     TOYOTA_TT_3_V2: 27
+    TOYOTA_TT_4_V2: 29
     TOYOTA_TT_FL_V2: 25
     TOYOTA_TT_FR_V2: 27
     TOYOTA_TT_RL_V2: 27
+    TOYOTA_TT_RR_V2: 29
+    TOYOTA_TT_SPARE_V2: -40
   response: |-
     7582A10086210044143
     7582A21434500000000
@@ -29,9 +36,12 @@ test_cases:
     TOYOTA_TT_1_V2: 35
     TOYOTA_TT_2_V2: 35
     TOYOTA_TT_3_V2: 37
+    TOYOTA_TT_4_V2: 38
     TOYOTA_TT_FL_V2: 35
     TOYOTA_TT_FR_V2: 35
     TOYOTA_TT_RL_V2: 37
+    TOYOTA_TT_RR_V2: 38
+    TOYOTA_TT_SPARE_V2: -40
   response: |-
     7582A10086210044B4B
     7582A214D4E00000000
@@ -39,9 +49,12 @@ test_cases:
     TOYOTA_TT_1_V2: 36
     TOYOTA_TT_2_V2: 38
     TOYOTA_TT_3_V2: 38
+    TOYOTA_TT_4_V2: 41
     TOYOTA_TT_FL_V2: 36
     TOYOTA_TT_FR_V2: 38
     TOYOTA_TT_RL_V2: 38
+    TOYOTA_TT_RR_V2: 41
+    TOYOTA_TT_SPARE_V2: -40
   response: |-
     7582A10086210044C4E
     7582A214E5100000000
@@ -49,9 +62,12 @@ test_cases:
     TOYOTA_TT_1_V2: 38
     TOYOTA_TT_2_V2: 35
     TOYOTA_TT_3_V2: 37
+    TOYOTA_TT_4_V2: 37
     TOYOTA_TT_FL_V2: 38
     TOYOTA_TT_FR_V2: 35
     TOYOTA_TT_RL_V2: 37
+    TOYOTA_TT_RR_V2: 37
+    TOYOTA_TT_SPARE_V2: -40
   response: |-
     7582A10086210044E4B
     7582A214D4D00000000
@@ -59,9 +75,12 @@ test_cases:
     TOYOTA_TT_1_V2: 46
     TOYOTA_TT_2_V2: 43
     TOYOTA_TT_3_V2: 49
+    TOYOTA_TT_4_V2: 48
     TOYOTA_TT_FL_V2: 46
     TOYOTA_TT_FR_V2: 43
     TOYOTA_TT_RL_V2: 49
+    TOYOTA_TT_RR_V2: 48
+    TOYOTA_TT_SPARE_V2: -40
   response: |-
     7582A10086210045653
     7582A21595800000000
@@ -69,9 +88,12 @@ test_cases:
     TOYOTA_TT_1_V2: 46
     TOYOTA_TT_2_V2: 44
     TOYOTA_TT_3_V2: 49
+    TOYOTA_TT_4_V2: 48
     TOYOTA_TT_FL_V2: 46
     TOYOTA_TT_FR_V2: 44
     TOYOTA_TT_RL_V2: 49
+    TOYOTA_TT_RR_V2: 48
+    TOYOTA_TT_SPARE_V2: -40
   response: |-
     7582A10086210045654
     7582A21595800000000
