--- a/tests/test_cases/2023/commands/750.758.221004|e=2A,ta=2A,fc=1.yaml
+++ b/tests/test_cases/2023/commands/750.758.221004|e=2A,ta=2A,fc=1.yaml
@@ -3,9 +3,13 @@ test_cases:
 - expected_values:
     TOYOTA_TT_2_V2: 34
     TOYOTA_TT_3_V2: 33
+    TOYOTA_TT_4_V2: 34
+    TOYOTA_TT_5_V2: 33
     TOYOTA_TT_FL_V2: -40
     TOYOTA_TT_FR_V2: 34
     TOYOTA_TT_RL_V2: 33
+    TOYOTA_TT_RR_V2: 34
+    TOYOTA_TT_SPARE_V2: 33
   response: |-
     221004
     7582A1008621004004A
@@ -14,6 +18,8 @@ test_cases:
     TOYOTA_TT_FL_V2: -40
     TOYOTA_TT_FR_V2: -40
     TOYOTA_TT_RL_V2: -40
+    TOYOTA_TT_RR_V2: -40
+    TOYOTA_TT_SPARE_V2: -40
   response: |-
     7582A10086210040000
     7582A21000000000000
@@ -22,6 +28,8 @@ test_cases:
     TOYOTA_TT_FL_V2: -40
     TOYOTA_TT_FR_V2: -40
     TOYOTA_TT_RL_V2: 33
+    TOYOTA_TT_RR_V2: -40
+    TOYOTA_TT_SPARE_V2: -40
   response: |-
     7582A10086210040000
     7582A21490000000000
@@ -29,9 +37,13 @@ test_cases:
     TOYOTA_TT_1_V2: 23
     TOYOTA_TT_2_V2: 19
     TOYOTA_TT_3_V2: 23
+    TOYOTA_TT_4_V2: 19
+    TOYOTA_TT_5_V2: 18
     TOYOTA_TT_FL_V2: 23
     TOYOTA_TT_FR_V2: 19
     TOYOTA_TT_RL_V2: 23
+    TOYOTA_TT_RR_V2: 19
+    TOYOTA_TT_SPARE_V2: 18
   response: |-
     7582A10086210043F3B
     7582A213F3B3A000000
@@ -39,9 +51,13 @@ test_cases:
     TOYOTA_TT_1_V2: 33
     TOYOTA_TT_2_V2: 34
     TOYOTA_TT_3_V2: 33
+    TOYOTA_TT_4_V2: 34
+    TOYOTA_TT_5_V2: 34
     TOYOTA_TT_FL_V2: 33
     TOYOTA_TT_FR_V2: 34
     TOYOTA_TT_RL_V2: 33
+    TOYOTA_TT_RR_V2: 34
+    TOYOTA_TT_SPARE_V2: 34
   response: |-
     7582A1008621004494A
     7582A21494A4A000000
