--- a/tests/test_cases/2025/commands/750.758.221004|e=2A,ta=2A,fc=1.yaml
+++ b/tests/test_cases/2025/commands/750.758.221004|e=2A,ta=2A,fc=1.yaml
@@ -4,23 +4,31 @@ test_cases:
     TOYOTA_TT_FL_V2: -40
     TOYOTA_TT_FR_V2: -40
     TOYOTA_TT_RL_V2: -40
+    TOYOTA_TT_RR_V2: -40
+    TOYOTA_TT_SPARE_V2: -40
   response: |-
     7582A10086210040000
     7582A21000000000000
 - expected_values:
     TOYOTA_TT_2_V2: 23
+    TOYOTA_TT_4_V2: 23
     TOYOTA_TT_FL_V2: -40
     TOYOTA_TT_FR_V2: 23
     TOYOTA_TT_RL_V2: -40
+    TOYOTA_TT_RR_V2: 23
+    TOYOTA_TT_SPARE_V2: -40
   response: |-
     7582A1008621004003F
     7582A21003F00000000
 - expected_values:
     TOYOTA_TT_2_V2: 45
     TOYOTA_TT_3_V2: 47
+    TOYOTA_TT_4_V2: 45
     TOYOTA_TT_FL_V2: -40
     TOYOTA_TT_FR_V2: 45
     TOYOTA_TT_RL_V2: 47
+    TOYOTA_TT_RR_V2: 45
+    TOYOTA_TT_SPARE_V2: -40
   response: |-
     7582A10086210040055
     7582A21575500000000
@@ -28,9 +36,12 @@ test_cases:
     TOYOTA_TT_1_V2: 41
     TOYOTA_TT_2_V2: 38
     TOYOTA_TT_3_V2: 39
+    TOYOTA_TT_4_V2: 40
     TOYOTA_TT_FL_V2: 41
     TOYOTA_TT_FR_V2: 38
     TOYOTA_TT_RL_V2: 39
+    TOYOTA_TT_RR_V2: 40
+    TOYOTA_TT_SPARE_V2: -40
   response: |-
     7582A1008621004514E
     7582A214F5000000000
@@ -38,9 +49,12 @@ test_cases:
     TOYOTA_TT_1_V2: 56
     TOYOTA_TT_2_V2: 56
     TOYOTA_TT_3_V2: 52
+    TOYOTA_TT_4_V2: 54
     TOYOTA_TT_FL_V2: 56
     TOYOTA_TT_FR_V2: 56
     TOYOTA_TT_RL_V2: 52
+    TOYOTA_TT_RR_V2: 54
+    TOYOTA_TT_SPARE_V2: -40
   response: |-
     7582A10086210046060
     7582A215C5E00000000
@@ -48,9 +62,12 @@ test_cases:
     TOYOTA_TT_1_V2: 56
     TOYOTA_TT_2_V2: 57
     TOYOTA_TT_3_V2: 54
+    TOYOTA_TT_4_V2: 54
     TOYOTA_TT_FL_V2: 56
     TOYOTA_TT_FR_V2: 57
     TOYOTA_TT_RL_V2: 54
+    TOYOTA_TT_RR_V2: 54
+    TOYOTA_TT_SPARE_V2: -40
   response: |-
     7582A10086210046061
     7582A215E5E00000000
