Update command data for Toyota/Tundra

--- a/tests/test_cases/2023/commands/700.708.221002.yaml
+++ b/tests/test_cases/2023/commands/700.708.221002.yaml
@@ -4,8 +4,8 @@ test_cases:
     TOYOTA_12V_V: 12.55856
   response: '708056210022830'
 - expected_values:
-    TOYOTA_12V_V: 12.68063
-  response: '708056210022894'
-- expected_values:
     TOYOTA_12V_V: 14.06735
   response: 708056210022D04
+- expected_values:
+    TOYOTA_12V_V: 14.35055
+  response: 708056210022DEC
