--- a/tests/test_cases/2023/commands/700.708.221089.yaml
+++ b/tests/test_cases/2023/commands/700.708.221089.yaml
@@ -21,6 +21,10 @@ test_cases:
     TOYOTA_EXHAUST_VVT_HOLD_LEARN_VALUE_1: 63.99254
   response: 7080562108928F7
 - expected_values:
+    TOYOTA_EXHAUST_VVT_HOLD_LEARN_B1: 64.03526
+    TOYOTA_EXHAUST_VVT_HOLD_LEARN_VALUE_1: 64.03526
+  response: 7080562108928FE
+- expected_values:
     TOYOTA_EXHAUST_VVT_HOLD_LEARN_B1: 64.23663
     TOYOTA_EXHAUST_VVT_HOLD_LEARN_VALUE_1: 64.23663
   response: 70805621089291F
