--- a/tests/test_cases/2023/commands/700.708.2210A2.yaml
+++ b/tests/test_cases/2023/commands/700.708.2210A2.yaml
@@ -15,6 +15,20 @@ test_cases:
     70810086210A28E8E94
     708219E8F0000000000
 - expected_values:
+    TOYOTA_AFRL_HIGH_1: 9.36941
+    TOYOTA_AFRL_IDLE_1: 7.02588
+    TOYOTA_AFRL_LOW_1: 3.90118
+    TOYOTA_AFRL_MID_1_1: 7.80706
+    TOYOTA_AFRL_MID_2_1: 13.27529
+    TOYOTA_AF_LEARN_HIGH_PORT_B1: 9.60784
+    TOYOTA_AF_LEARN_IDLE_PORT_B1: 7.2549
+    TOYOTA_AF_LEARN_LOW_PORT_B1: 4.11765
+    TOYOTA_AF_LEARN_MID1_PORT_B1: 8.03922
+    TOYOTA_AF_LEARN_MID2_PORT_B1: 13.52941
+  response: |-
+    70810086210A2928A94
+    70821A2980000000000
+- expected_values:
     TOYOTA_AFRL_HIGH_1: 8.58824
     TOYOTA_AFRL_IDLE_1: 7.41647
     TOYOTA_AFRL_LOW_1: 5.07294
