--- a/tests/test_cases/2023/commands/700.708.221F6D.yaml
+++ b/tests/test_cases/2023/commands/700.708.221F6D.yaml
@@ -1,12 +1,28 @@
 command_id: 700.708.221F6D
 test_cases:
 - expected_values:
-    TOYOTA_HFP_ACTUAL: 7.89
+    TOYOTA_HFP_ACTUAL: 5.05
     TOYOTA_HFP_TARGET: 4000
     TOYOTA_LOW_FUEL_PRESSURE: 420
   response: |-
     708100E621F6D1B0190
-    708210315000028002A
+    7082101F9000028002A
+    7082200000000000000
+- expected_values:
+    TOYOTA_HFP_ACTUAL: 5.1
+    TOYOTA_HFP_TARGET: 4000
+    TOYOTA_LOW_FUEL_PRESSURE: 370
+  response: |-
+    708100E621F6D1B0190
+    7082101FE0000280025
+    7082200000000000000
+- expected_values:
+    TOYOTA_HFP_ACTUAL: 5.12
+    TOYOTA_HFP_TARGET: 4000
+    TOYOTA_LOW_FUEL_PRESSURE: 420
+  response: |-
+    708100E621F6D1B0190
+    708210200000028002A
     7082200000000000000
 - expected_values:
     TOYOTA_HFP_ACTUAL: 15.07
