--- a/tests/test_cases/2023/commands/700.708.22102A.yaml
+++ b/tests/test_cases/2023/commands/700.708.22102A.yaml
@@ -72,3 +72,12 @@ test_cases:
   response: |-
     708100862102A938284
     7082185890000000000
+- expected_values:
+    TOYOTA_A_F_RATIO_LEARNED_HIGH_BANK_1: 6.86275
+    TOYOTA_A_F_RATIO_LEARNED_IDLE_BANK_1: 9.60784
+    TOYOTA_A_F_RATIO_LEARNED_LOW_BANK_1: 4.5098
+    TOYOTA_A_F_RATIO_LEARNED_MID_1_BANK_1: 6.47059
+    TOYOTA_A_F_RATIO_LEARNED_MID_2_BANK_1: 3.72549
+  response: |-
+    708100862102A988B90
+    7082189910000000000
