--- a/tests/test_cases/2023/commands/700.708.221041.yaml
+++ b/tests/test_cases/2023/commands/700.708.221041.yaml
@@ -1,6 +1,10 @@
 command_id: 700.708.221041
 test_cases:
 - expected_values:
+    TOYOTA_ECT_IGN: 19.375
+    TOYOTA_ECT_INIT: 19.375
+  response: 708056210415F5F
+- expected_values:
     TOYOTA_ECT_IGN: 30.625
     TOYOTA_ECT_INIT: 31.25
   response: '708056210417172'
