--- a/tests/test_cases/2023/commands/700.708.22105E.yaml
+++ b/tests/test_cases/2023/commands/700.708.22105E.yaml
@@ -1,8 +1,8 @@
 command_id: 700.708.22105E
 test_cases:
 - expected_values:
-    TOYOTA_ECU_INTERNAL_T: 35
-  response: 7080462105E4B
+    TOYOTA_ECU_INTERNAL_T: 13
+  response: '7080462105E35'
 - expected_values:
     TOYOTA_ECU_INTERNAL_T: 76
   response: '7080462105E74'
