--- a/tests/test_cases/2014/commands/7B0.7B8.2106.yaml
+++ b/tests/test_cases/2014/commands/7B0.7B8.2106.yaml
@@ -42,3 +42,9 @@ test_cases:
     TOYOTA_YAW_RATE: 1
     TOYOTA_YAW_RATE2: -1
   response: 7B8056106817FD3
+- expected_values:
+    TOYOTA_YAW_1: 12
+    TOYOTA_YAW_2: 24
+    TOYOTA_YAW_RATE: 12
+    TOYOTA_YAW_RATE2: 24
+  response: 7B80561068C98C9
