--- a/tests/test_cases/2014/commands/7B0.7B8.2146.yaml
+++ b/tests/test_cases/2014/commands/7B0.7B8.2146.yaml
@@ -8,3 +8,11 @@ test_cases:
   response: |-
     7B81008614600007E2F
     7B821FFFF0000000000
+- expected_values:
+    TOYOTA_ZP_DEC: -25.11
+    TOYOTA_ZP_DEC2: -24.91384
+    TOYOTA_ZP_YAW: -2
+    TOYOTA_ZP_YAW_RATE: -2
+  response: |-
+    7B81008614600017E2F
+    7B821FFFF0000000000
