--- a/tests/test_cases/2014/commands/7B0.7B8.2147.yaml
+++ b/tests/test_cases/2014/commands/7B0.7B8.2147.yaml
@@ -54,6 +54,14 @@ test_cases:
   response: 7B80761470000808000
 - expected_values:
     TOYOTA_LAT_G: 0
+    TOYOTA_LNG_G: -0.06
+    TOYOTA_STEERING_ANGLE: 681
+    TOYOTA_STEER_ANGLE: 681
+    TOYOTA_YAW: 11
+    TOYOTA_YAW_RATE_V2: 11
+  response: 7B807614700FD8B9A9A
+- expected_values:
+    TOYOTA_LAT_G: 0
     TOYOTA_LNG_G: -0.02
     TOYOTA_STEERING_ANGLE: 664.5
     TOYOTA_STEER_ANGLE: 664.5
