--- a/tests/test_cases/2014/commands/7C0.7C8.2121.yaml
+++ b/tests/test_cases/2014/commands/7C0.7C8.2121.yaml
@@ -4,6 +4,9 @@ test_cases:
     TOYOTA_VSS_V2: 0
   response: 7C803612100
 - expected_values:
+    TOYOTA_VSS_V2: 4
+  response: 7C803612104
+- expected_values:
     TOYOTA_VSS_V2: 15
   response: 7C80361210F
 - expected_values:
