--- a/tests/test_cases/2014/commands/7E0.7E8.2101.yaml
+++ b/tests/test_cases/2014/commands/7E0.7E8.2101.yaml
@@ -130,3 +130,29 @@ test_cases:
     7E8222CCE002D7F2951
     7E8232D0501AF01ED33
     7E824CD000000000000
+- expected_values:
+    TOYOTA_AAT: 80
+    TOYOTA_ACCEL_SENS_NO_1_VOLT: 18.82353
+    TOYOTA_ACCEL_SENS_NO_2_VOLT: 1.96078
+    TOYOTA_ATMOSPHERE_PRESSURE: 10
+    TOYOTA_CALCULATED_LOAD_7E0: 38.43137
+    TOYOTA_COOLANT_TEMP: 146
+    TOYOTA_ENGINE_RUN_TIME: 49
+    TOYOTA_ENGINE_SPEED: 1024
+    TOYOTA_INTAKE_AIR: 57
+    TOYOTA_MAF: 655.35
+    TOYOTA_MAP: 71
+    TOYOTA_THROTTLE_MOTOR_DUTY: 0.39216
+    TOYOTA_THROTTLE_SENSOR_POSITION: 51.76471
+    TOYOTA_THROTTLE_SENSOR_VOLT: 16.07843
+    TOYOTA_THROTTL_SENSOR_2_VOLT: 31.76471
+    TOYOTA_TIME_AFTER_DTC_CLEARED: 13476
+    TOYOTA_VEHICLE_LOAD: 0.10529
+    TOYOTA_VEHICLE_SPEED: 151
+    TOYOTA_WARMUP_CYCLE_CLEARED_DTC: 1
+  response: |-
+    7E8101C610162004504
+    7E8211D4761780ABA04
+    7E82200970031842951
+    7E823300501AF01F734
+    7E824A4000000000000
