--- a/tests/test_cases/2014/commands/7E0.7E8.2103.yaml
+++ b/tests/test_cases/2014/commands/7E0.7E8.2103.yaml
@@ -10,6 +10,15 @@ test_cases:
     7E8217C7BAC00353D03
     7E82279020200000000
 - expected_values:
+    TOYOTA_EVAP_PURGE_DUTY: 47.84314
+    TOYOTA_IGN_ADVANCE: 125
+    TOYOTA_LONG_FT_B1S1: -3.125
+    TOYOTA_SHORT_FT_B1S1: -2.34375
+  response: |-
+    7E81010610302027D7C
+    7E8217D7A9900003D03
+    7E82272020200000000
+- expected_values:
     TOYOTA_EVAP_PURGE_DUTY: 48.23529
     TOYOTA_IGN_ADVANCE: 123
     TOYOTA_LONG_FT_B1S1: -2.34375
