--- a/tests/test_cases/2014/commands/7E0.7E8.2104.yaml
+++ b/tests/test_cases/2014/commands/7E0.7E8.2104.yaml
@@ -55,3 +55,14 @@ test_cases:
     7E8216BF17FC26AD980
     7E8229780077FC28003
     7E82398FF9CFF000000
+- expected_values:
+    TOYOTA_AFS_CURRENT_B1S1: 127.99
+    TOYOTA_AFS_VOLTAGE_B1S1: 3.3495
+    TOYOTA_AF_LAMBDA_B1S1: 1.00066
+    TOYOTA_O2S_B1S2: 0.64
+    TOYOTA_TARGET_AIR_FUEL_RATIO: 0.98821
+  response: |-
+    7E8101861047F2080BA
+    7E8216B5180B56B2980
+    7E822BA800580B58004
+    7E82300FF00FF000000
