--- a/tests/test_cases/2014/commands/7E0.7E8.2105.yaml
+++ b/tests/test_cases/2014/commands/7E0.7E8.2105.yaml
@@ -36,3 +36,9 @@ test_cases:
   response: |-
     7E8100C61054C6915CC
     7E82115CC1094109400
+- expected_values:
+    TOYOTA_CATALYST_T_B1S1: 224.5
+    TOYOTA_CATALYST_T_B1S2: 224.5
+  response: |-
+    7E8100C61054C840A55
+    7E8210A5507E707E700
