--- a/tests/test_cases/2014/commands/7C0.7C8.2113.yaml
+++ b/tests/test_cases/2014/commands/7C0.7C8.2113.yaml
@@ -1,8 +1,14 @@
 command_id: 7C0.7C8.2113
 test_cases:
 - expected_values:
+    TOYOTA_BAT_V: 12.2
+  response: 7C80361137A
+- expected_values:
     TOYOTA_BAT_V: 13.3
   response: 7C803611385
 - expected_values:
     TOYOTA_BAT_V: 13.4
   response: 7C803611386
+- expected_values:
+    TOYOTA_BAT_V: 13.5
+  response: 7C803611387
