--- a/tests/test_cases/2014/commands/7C0.7C8.2123.yaml
+++ b/tests/test_cases/2014/commands/7C0.7C8.2123.yaml
@@ -1,6 +1,14 @@
 command_id: 7C0.7C8.2123
 test_cases:
 - expected_values:
+    TOYOTA_COOLANT_T: 0
+    TOYOTA_ECT_7C0: 0
+  response: 7C803612300
+- expected_values:
+    TOYOTA_COOLANT_T: 79
+    TOYOTA_ECT_7C0: 79
+  response: 7C80361239E
+- expected_values:
     TOYOTA_COOLANT_T: 88
     TOYOTA_ECT_7C0: 88
   response: 7C8036123B0
