--- a/tests/test_cases/2014/commands/7C4.7CC.2122.yaml
+++ b/tests/test_cases/2014/commands/7C4.7CC.2122.yaml
@@ -1,6 +1,9 @@
 command_id: 7C4.7CC.2122
 test_cases:
 - expected_values:
+    TOYOTA_AAT_7C4: 13.8
+  response: 7CC0361226A
+- expected_values:
     TOYOTA_AAT_7C4: 15.55
   response: 7CC0361226F
 - expected_values:
