--- a/tests/test_cases/2014/commands/7C4.7CC.2126.yaml
+++ b/tests/test_cases/2014/commands/7C4.7CC.2126.yaml
@@ -1,6 +1,9 @@
 command_id: 7C4.7CC.2126
 test_cases:
 - expected_values:
+    TOYOTA_ECT: 77.6
+  response: 7CC036126DA
+- expected_values:
     TOYOTA_ECT: 86.7
   response: 7CC036126F4
 - expected_values:
